解决了定位刷新跟随的bug

--- a/app/src/main/res/layout/acitvity_location.xml
+++ b/app/src/main/res/layout/acitvity_location.xml
@@ -45,7 +45,7 @@
 
     <LinearLayout
         android:id="@+id/ll_route"
-        android:visibility="visible"
+        android:visibility="gone"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="5dip"
